REFACTOR: split into Launcher/Core JAR, remove ReplaceHelper